appId: com.anonymous.rnme
name: "_helper - Login"

env:
  TEST_EMAIL: test@rnme.com
  TEST_PASSWORD: Test123$$

---

- launchApp:
    clearState: true

- tapOn:
    text: "Email"
- inputText: ${TEST_EMAIL}

- tapOn:
    text: "••••••••"
- inputText: ${TEST_PASSWORD}

- hideKeyboard

- tapOn:
    text: "Log in"

- waitForAnimationToEnd
